nginx-ingress/restrict-ingress-paths/.chainsaw-test/ig-bad.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bad-path-root
spec:
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /root
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bad-path-secrets
spec:
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /var/run/secrets
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bad-path-etc
spec:
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /etc/kubernetes/admin.conf
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bad-path-serviceaccount
spec:
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /var/run/kubernetes/serviceaccount
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
              number: 80
