nginx-ingress/restrict-ingress-paths/.chainsaw-test/ig-good.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: good-paths
spec:
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /tea
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
              number: 80
      - path: /coffee
        pathType: Prefix
        backend:
          service:
            name: coffee-svc
            port:
              number: 80
